<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mybusinesscard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="@dimen/padd"
            android:text="@string/textname"
            android:textAlignment="center"
            android:textColor="@color/textview_color"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_linear_height"
            android:scaleType="fitXY"
            android:src="@drawable/happykids" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="@dimen/padd"
            android:text="@string/info"
            android:textColor="@color/textview_color"
            android:textSize="@dimen/font_description_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingBottom="@dimen/padd"
            android:paddingLeft="@dimen/padd"
            android:text="@string/description"
            android:textSize="@dimen/font_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/open_hrs_linear_size"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imageview_height"
                android:layout_marginLeft="@dimen/padd"
                android:src="@drawable/shopping_cart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:text="@string/hours"
                android:textSize="@dimen/font_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/phone_linear_size"
            android:layout_marginBottom="@dimen/space_linear"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imageview_height"
                android:layout_marginLeft="@dimen/padd"
                android:src="@drawable/phone_call" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textSize="@dimen/font_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_linear_size"
            android:layout_marginBottom="@dimen/space_linear"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imageview_height"
                android:layout_marginLeft="@dimen/padd"
                android:src="@drawable/envelope" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="@dimen/font_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_linear_size"
            android:layout_marginBottom="@dimen/space_linear"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imageview_height"
                android:layout_marginLeft="@dimen/padd"
                android:src="@drawable/placeholder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/address" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>